--- a/frontend/scss/tabler-extra.scss
+++ b/frontend/scss/tabler-extra.scss
@@ -156,6 +156,10 @@ $pink: #f66d9b;
 /* modal wide */
 
 @media (min-width: 576px) {
+    .modal-dialog {
+        max-width: 550px !important;
+    }
+
     .modal-dialog.wide {
         max-width: 700px;
         margin: 1.75rem auto;
